--- a/app/globals.css
+++ b/app/globals.css
@@ -236,10 +236,10 @@ html.dark .gridLine {
   position: absolute;
   top: 0;
   left: 0;
-  filter: blur(35px);
+  filter: blur(35px) saturate(200%);
   pointer-events: none;
   opacity: 0.7;
-  animation: k-jdTnBl 20s linear infinite;
+  /* animation: k-jdTnBl 20s linear infinite; */
 }
 
 @keyframes k-jdTnBl {
