--- a/app/globals.css
+++ b/app/globals.css
@@ -235,9 +235,9 @@ html.dark .gridLine {
   position: absolute;
   top: 0;
   left: 0;
-  filter: blur(90px) saturate(1500%);
+  filter: blur(90px) saturate(777%) !important;
   pointer-events: none;
-  animation: scaleAnimation 4s infinite alternate ease-in-out;
+  /* animation: scaleAnimation 4s infinite alternate ease-in-out; */
 }
 
 @keyframes scaleAnimation {
@@ -426,10 +426,10 @@ html.dark .text {
 .c-lesPJm-ijsQFok-css {
   position: absolute;
   pointer-events: none;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  opacity: 0.2;
-  mix-blend-mode: overlay;
+  /* top: 50%;
+  left: 50%; */
+  /* transform: translate(-50%, -50%); */
+  margin: auto;
+  opacity: 1;
+  mix-blend-mode: overlay !important;
 }
