--- a/app/globals.css
+++ b/app/globals.css
@@ -433,3 +433,23 @@ html.dark .text {
   opacity: 1;
   mix-blend-mode: overlay !important;
 }
+
+
+.grid-hero {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  text-align: center;
+  z-index: -1;
+}
+
+.grid-svg {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  z-index: 1;
+}
